# btpsj.github.io

./: .gitignore  .gitmodules  LICENSE  README.md  blog.cabal  index.html  index.md  references.bib  site.hs  stack.yaml
.github/workflows/: deploy.yml
css/: default.css  syntax.css
docs/: about.html  archive.html  contact.html  index.html  now.html  uses.html
docs/css/: bulma.css  default.css  syntax.css
docs/posts/: 2015-08-23-example.html  2025-05-01-buck2-cmake.html  2025-10-04-typst.html  2025-10-14-genomic-data-lakehouse.html  2025-10-16-bonito-rust.html  2025-10-21-ds3502-lessons.html
pages/: now.md  uses.md
posts/: 2015-08-23-example.markdown  2025-05-01-buck2-cmake.markdown  2025-07-05-rfl-rpi-notes.markdown  2025-07-09-rfl-anatomy.markdown  2025-08-16-bootlin-notes.markdown  2025-10-04-typst.typ  2025-10-14-genomic-data-lakehouse.markdown  2025-10-16-bonito-rust.markdown  2025-10-21-ds3502-lessons.markdown
templates/: archive.html  default.html  post-list.html  post.html
