name:                blog
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://bsaintjo.github.io
license:             BSD3
license-file:        LICENSE
author:              Brandon Saint-John
maintainer:          branstj@gmail.com
copyright:           Copyright (c) 2026 Brandon Saint-John
category:            blog
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.16.*
                  , filepath
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010